<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.swm.demo.MainActivity">

    <com.swm.demo.DeviceStatus
        android:id="@+id/ble_device_status"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ble_status_inactive"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="28dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/swm_heart_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_heart_rate"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintVertical_bias="0.179" />
    <com.swm.demo.view.HeartRateView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swm_heart_rate"
        app:layout_constraintBottom_toBottomOf="@+id/swm_heart_rate_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/swm_heart_rate_label"
        android:text="0"
        app:layout_constraintHorizontal_bias="0.393"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/swm_heart_rate_label"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/swm_calorie_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_calorie"
        app:layout_constraintTop_toBottomOf="@id/swm_heart_rate_label"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintVertical_bias="0.051" />

    <com.swm.demo.view.CalorieView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swm_calorie"
        app:layout_constraintBottom_toBottomOf="@+id/swm_calorie_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/swm_calorie_label"
        android:text="0"
        app:layout_constraintHorizontal_bias="0.444"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/swm_calorie_label"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <com.swm.demo.view.StressView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swm_stress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="0"
        app:layout_constraintHorizontal_bias="0.461"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.409" />

    <com.swm.demo.view.PhyAgeView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swm_phy_age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/swm_phy_age"
        app:layout_constraintHorizontal_bias="0.461"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.343"
        app:layout_constraintTop_toBottomOf="@+id/swm_stress" />

    <com.swm.demo.view.StepView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swm_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/swm_step"
        app:layout_constraintHorizontal_bias="0.461"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.343"
        app:layout_constraintTop_toBottomOf="@+id/swm_phy_age" />
</android.support.constraint.ConstraintLayout>
